test/expected/unterminated_quote_multiline.out
shit: 1:7: error: Unterminated string literal.
     1 |  привет"world
       |        ^~~~~~ here.
shit: 2:5: note:
     2 |  или sailor
       |            ^~ Expected " here.
